turtleart.housemany.HouseMany.scala.error
Compilation error:
HouseMany:4: error: overloaded method value setX with alternatives:
  (x$1: Int)Unit <and>
  (x$1: Double)Unit
 cannot be applied to ()
      setX()
      ^HouseMany:5: error: overloaded method value setY with alternatives:
  (x$1: Int)Unit <and>
  (x$1: Double)Unit
 cannot be applied to ()
      setY()
      ^