turtleart.housemany.HouseMany.scala.code
override def run() {
  for(i <- 1 to 3) {
    for(j <- 1 to 4) {
      setX()
      setY()
      if(i == 2) {
        if(j == 2 || j == 3)
        	leveCrayon()
        else
        	baisseCrayon()
      }
      avance(30)
      droite(30)
      
      for(k <- 1 to 3) {
        avance(30)
        droite(120)
      }
      
      droite(60)
      
      for(k <- 1 to 3) {
        avance(30)
        droite(90)
      }
    }
  }
}